# kind-skaffold-workshop

./: .env  README.md  skaffold.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/bff/: Dockerfile  go.mod  gqlgen.yml  server.go
apps/bff/graph/: schema.resolvers.go
manifests/: api.yaml  front.yaml
